--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,3 +16,11 @@ build:
         manual:
           - src: '***/*.ts'
             dest: .
+    - image: arboureric/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '***/*.ts'
+            dest: .
