--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -40,3 +40,11 @@ build:
         manual:
           - src: '***/*.ts'
             dest: .
+    - image: arboureric/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '***/*.ts'
+            dest: .
