--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: orders
-          image: arboureric/orders
+          image: us.gcr.io/ticketing-dev-304820/orders
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
