--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: arboureric/auth
+          image: us.gcr.io/ticketing-dev-304820/auth
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
