--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: payments
-          image: arboureric/payments
+          image: us.gcr.io/ticketing-dev-304820/payments
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
