--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tickets
-          image: arboureric/tickets
+          image: us.gcr.io/ticketing-dev-304820/tickets
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
