--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -1,10 +1,10 @@
-name: Test
+name: Tests Auth
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on pull request events but only for the main branch
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
